Fix overflow problem in content

--- a/src/content/styles/TranslatePanel.scss
+++ b/src/content/styles/TranslatePanel.scss
@@ -2,6 +2,7 @@
   .simple-translate-panel {
     all: initial;
     position: fixed;
+    overflow: hidden;
     background-color: var(--simple-translate-main-bg);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     border-radius: 3px;
@@ -23,6 +24,8 @@
       height: max-content;
       max-width: 100%;
       max-height: 100%;
+      overflow: auto;
+
       p {
         all: initial;
         display: block;
